--- a/Job_attrition_nb.Rmd
+++ b/Job_attrition_nb.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output: html_document
 ---
 # **Chapter 5 Logistic Regression**
 **5.1 Prerequisites**
@@ -412,3 +412,192 @@ In contrast, the churn_train data has 1030 observations and Figure 8.3 illustrat
 ```{r}
 hyper_grid # K from 1,19,37,55...343 (20 rows)
 ```
+
+#**Chapter 14 Support Vector Machines**
+
+```{r}
+# Helper packages
+#install.packages("kernlab")
+library(dplyr)    # for data wrangling
+library(ggplot2)  # for awesome graphics
+library(rsample)  # for data splitting
+
+# Modeling packages
+library(caret)    # for classification and regression training
+library(kernlab)  # for fitting SVMs
+
+# Model interpretability packages
+library(pdp)      # for partial dependence plots, etc.
+library(vip)      # for variable importance plots
+```
+
+
+```{r}
+# Load attrition data
+library(modeldata) # data for some ML model
+data("attrition")
+df <- attrition %>% 
+  mutate_if(is.ordered, factor, ordered = FALSE)
+
+# Create training (70%) and test (30%) sets
+set.seed(123)  # for reproducibility
+churn_split <- initial_split(df, prop = 0.7, strata = "Attrition")
+churn_train <- training(churn_split)
+churn_test  <- testing(churn_split)
+```
+
+
+```{r}
+# Linear (i.e., soft margin classifier)
+caret::getModelInfo("svmLinear")$svmLinear$parameters
+##   parameter   class label
+## 1         C numeric  Cost
+
+# Polynomial kernel
+caret::getModelInfo("svmPoly")$svmPoly$parameters
+##   parameter   class             label
+## 1    degree numeric Polynomial Degree
+## 2     scale numeric             Scale
+## 3         C numeric              Cost
+
+# Radial basis kernel
+caret::getModelInfo("svmRadial")$svmRadial$parameters
+##   parameter   class label
+## 1     sigma numeric Sigma
+## 2         C numeric  Cost
+```
+
+
+```{r}
+#install.packages("e1071")
+# Tune an SVM with radial basis kernel
+set.seed(1854)  # for reproducibility
+churn_svm <- train(
+  Attrition ~ ., 
+  data = churn_train,
+  method = "svmRadial",               
+  preProcess = c("center", "scale"),  
+  trControl = trainControl(method = "cv", number = 5),
+  tuneLength = 10
+)
+```
+
+
+```{r}
+# Plot results
+ggplot(churn_svm) + theme_light()
+```
+
+Plotting the results, we see that smaller values of the cost parameter ( 
+C≈2–8) provide better cross-validated accuracy scores for these training data:
+```{r}
+# Print results
+churn_svm$results
+##          sigma      C  Accuracy     Kappa  AccuracySD   KappaSD
+## 1  0.009590249   0.25 0.8388542 0.0000000 0.004089627 0.0000000
+## 2  0.009590249   0.50 0.8388542 0.0000000 0.004089627 0.0000000
+## 3  0.009590249   1.00 0.8515233 0.1300469 0.014427649 0.1013069
+## 4  0.009590249   2.00 0.8708857 0.3526368 0.023749215 0.1449342
+## 5  0.009590249   4.00 0.8709611 0.4172884 0.026640331 0.1302496
+## 6  0.009590249   8.00 0.8660873 0.4242800 0.026271496 0.1206188
+## 7  0.009590249  16.00 0.8563495 0.4012563 0.026866012 0.1298460
+## 8  0.009590249  32.00 0.8515138 0.3831775 0.028717623 0.1338717
+## 9  0.009590249  64.00 0.8515138 0.3831775 0.028717623 0.1338717
+## 10 0.009590249 128.00 0.8515138 0.3831775 0.028717623 0.1338717
+```
+
+#14.4.1 Class weights
+
+```{r}
+class.weights = c("No" = 1, "Yes" = 10)
+```
+
+in the call to caret::train() or kernlab::ksvm() to make false negatives (i.e., predicting “Yes” when the truth is “No”) ten times more costly than false positives (i.e., predicting “No” when the truth is “Yes”). Cost-sensitive training with SVMs is left as an exercise on the book website.
+
+#14.4.2 Class probabilities
+
+In practice, predicted class probabilities are often more useful than the predicted class labels. For instance, we would need the predicted class probabilities if we were using an optimization metric like AUC (Chapter 2), as opposed to classification accuracy. In that case, we can set prob.model = TRUE in the call to kernlab::ksvm() or classProbs = TRUE in the call to caret::trainControl() (for details, see ?kernlab::ksvm and the references therein):
+```{r}
+# Control params for SVM
+ctrl <- trainControl(
+  method = "cv", 
+  number = 5, 
+  classProbs = TRUE,                 
+  summaryFunction = twoClassSummary  # also needed for AUC/ROC
+)
+
+# Tune an SVM
+set.seed(5628)  # for reproducibility
+churn_svm_auc <- train(
+  Attrition ~ ., 
+  data = churn_train,
+  method = "svmRadial",               
+  preProcess = c("center", "scale"),  
+  metric = "ROC",  # area under ROC curve (AUC)       
+  trControl = ctrl,
+  tuneLength = 10
+)
+
+```
+
+
+```{r}
+churn_svm_auc$results
+##          sigma      C       ROC      Sens      Spec      ROCSD      SensSD     SpecSD
+## 1  0.009727585   0.25 0.8379109 0.9675488 0.3933824 0.06701067 0.012073306 0.11466031
+## 2  0.009727585   0.50 0.8376397 0.9652767 0.3761029 0.06694554 0.010902039 0.14775214
+## 3  0.009727585   1.00 0.8377081 0.9652633 0.4055147 0.06725101 0.007798768 0.09871169
+## 4  0.009727585   2.00 0.8343294 0.9756750 0.3459559 0.06803483 0.012712528 0.14320366
+## 5  0.009727585   4.00 0.8200427 0.9745255 0.3452206 0.07188838 0.013092221 0.12082675
+## 6  0.009727585   8.00 0.8123546 0.9699278 0.3327206 0.07582032 0.013513393 0.11819788
+## 7  0.009727585  16.00 0.7915612 0.9756883 0.2849265 0.07791598 0.010094292 0.10700782
+## 8  0.009727585  32.00 0.7846566 0.9745255 0.2845588 0.07752526 0.010615423 0.08923723
+## 9  0.009727585  64.00 0.7848594 0.9745255 0.2845588 0.07741087 0.010615423 0.09848550
+## 10 0.009727585 128.00 0.7848594 0.9733895 0.2783088 0.07741087 0.010922892 0.10913126
+```
+
+
+```{r}
+confusionMatrix(churn_svm_auc)
+```
+#14.5 Feature interpretation
+
+```{r}
+prob_yes <- function(object, newdata) {
+  predict(object, newdata = newdata, type = "prob")[, "Yes"]
+}
+```
+
+
+```{r}
+# Variable importance plot
+set.seed(2827)  # for reproducibility
+vip(churn_svm_auc, method = "permute", nsim = 5, train = churn_train, 
+    target = "Attrition", metric = "auc", reference_class = "Yes", 
+    pred_wrapper = prob_yes)
+```
+
+
+```{r}
+features <- c("OverTime", "WorkLifeBalance", 
+              "JobSatisfaction", "JobRole")
+pdps <- lapply(features, function(x) {
+  partial(churn_svm_auc, pred.var = x, which.class = 2,  
+          prob = TRUE, plot = TRUE, plot.engine = "ggplot2") +
+    coord_flip()
+})
+grid.arrange(grobs = pdps,  ncol = 2)
+```
+
+
+```{r}
+```
+
+
+```{r}
+```
+
+
+```{r}
+```
+
