--- a/MNIST.Rmd
+++ b/MNIST.Rmd
@@ -137,14 +137,330 @@ vi
 ## V433  63.74  55.69  76.69  55.69  57.43  55.69  87.59  68.44  55.69 63.74
 ```
 
+#**Chapter 13 Deep Learning**
 
 ```{r}
+# Helper packages
+#install.packages("tensorflow")
+library(dplyr)         # for basic data wrangling
+
+# Modeling packages
+library(keras)         # for fitting DNNs
+library(tfruns)        # for additional grid search & model training functions
+
+# Modeling helper package - not necessary for reproducibility
+library(tfestimators)  # provides grid search & model training interface
+```
+
+```{r}
+# Import MNIST training data
+mnist <- dslabs::read_mnist()
+mnist_x <- mnist$train$images
+mnist_y <- mnist$train$labels
+
+# Rename columns and standardize feature values
+colnames(mnist_x) <- paste0("V", 1:ncol(mnist_x))
+mnist_x <- mnist_x / 255
+```
+
+```{r}
+tensorflow::install_tensorflow()
+tensorflow::tf_config()
+```
+
+```{r}
+# One-hot encode response
+mnist_y <- to_categorical(mnist_y, 10)
+```
+
+
+```{r}
+#devtools::install_github("rstudio/tensorflow")
+#devtools::install_github("rstudio/keras")
+```
+
+
+```{r}
+model <- keras_model_sequential() %>%
+  layer_dense(units = 128, input_shape = ncol(mnist_x)) %>%
+  layer_dense(units = 64) %>%
+  layer_dense(units = 10)
+```
+
+
+```{r}
+model <- keras_model_sequential() %>%
+  layer_dense(units = 128, activation = "relu", input_shape = p) %>%
+  layer_dense(units = 64, activation = "relu") %>%
+  layer_dense(units = 10, activation = "softmax")
+```
+
+
+```{r}
+model <- keras_model_sequential() %>%
+  
+  # Network architecture
+  layer_dense(units = 128, activation = "relu", input_shape = ncol(mnist_x)) %>%
+  layer_dense(units = 64, activation = "relu") %>%
+  layer_dense(units = 10, activation = "softmax") %>%
+  
+  # Backpropagation
+  compile(
+    loss = 'categorical_crossentropy',
+    optimizer = optimizer_rmsprop(),
+    metrics = c('accuracy')
+  )
+```
+
+#13.6 Model training
+
+```{r}
+# Train the model
+fit1 <- model %>%
+  fit(
+    x = mnist_x,
+    y = mnist_y,
+    epochs = 25,
+    batch_size = 128,
+    validation_split = 0.2,
+    verbose = FALSE
+  )
+
+# Display output
+fit1
+## Trained on 48,000 samples, validated on 12,000 samples (batch_size=128, epochs=25)
+## Final epoch (plot to see history):
+## val_loss: 0.1512
+##  val_acc: 0.9773
+##     loss: 0.002308
+##      acc: 0.9994
+plot(fit1)
+```
+
+#13.7.2 Batch normalization
+```{r}
+model_w_norm <- keras_model_sequential() %>%
+  
+  # Network architecture with batch normalization
+  layer_dense(units = 256, activation = "relu", input_shape = ncol(mnist_x)) %>%
+  layer_batch_normalization() %>%
+  layer_dense(units = 128, activation = "relu") %>%
+  layer_batch_normalization() %>%
+  layer_dense(units = 64, activation = "relu") %>%
+  layer_batch_normalization() %>%
+  layer_dense(units = 10, activation = "softmax") %>%
+
+  # Backpropagation
+  compile(
+    loss = "categorical_crossentropy",
+    optimizer = optimizer_rmsprop(),
+    metrics = c("accuracy")
+  )
+```
+#13.7.3 Regularization
+
+```{r}
+model_w_reg <- keras_model_sequential() %>%
+  
+  # Network architecture with L1 regularization and batch normalization
+  layer_dense(units = 256, activation = "relu", input_shape = ncol(mnist_x),
+              kernel_regularizer = regularizer_l2(0.001)) %>%
+  layer_batch_normalization() %>%
+  layer_dense(units = 128, activation = "relu", 
+              kernel_regularizer = regularizer_l2(0.001)) %>%
+  layer_batch_normalization() %>%
+  layer_dense(units = 64, activation = "relu", 
+              kernel_regularizer = regularizer_l2(0.001)) %>%
+  layer_batch_normalization() %>%
+  layer_dense(units = 10, activation = "softmax") %>%
+
+  # Backpropagation
+  compile(
+    loss = "categorical_crossentropy",
+    optimizer = optimizer_rmsprop(),
+    metrics = c("accuracy")
+  )
+```
+
+Drop out
+```{r}
+model_w_drop <- keras_model_sequential() %>%
+  
+  # Network architecture with 20% dropout
+  layer_dense(units = 256, activation = "relu", input_shape = ncol(mnist_x)) %>%
+  layer_dropout(rate = 0.2) %>%
+  layer_dense(units = 128, activation = "relu") %>%
+  layer_dropout(rate = 0.2) %>%
+  layer_dense(units = 64, activation = "relu") %>%
+  layer_dropout(rate = 0.2) %>%
+  layer_dense(units = 10, activation = "softmax") %>%
+
+  # Backpropagation
+  compile(
+    loss = "categorical_crossentropy",
+    optimizer = optimizer_rmsprop(),
+    metrics = c("accuracy")
+  )
+```
+#13.7.4 Adjust learning rate
+
+```{r}
+model_w_adj_lrn <- keras_model_sequential() %>%
+  layer_dense(units = 256, activation = "relu", input_shape = ncol(mnist_x)) %>%
+  layer_batch_normalization() %>%
+  layer_dropout(rate = 0.4) %>%
+  layer_dense(units = 128, activation = "relu") %>%
+  layer_batch_normalization() %>%
+  layer_dropout(rate = 0.3) %>%
+  layer_dense(units = 64, activation = "relu") %>%
+  layer_batch_normalization() %>%
+  layer_dropout(rate = 0.2) %>%
+  layer_dense(units = 10, activation = "softmax") %>%
+  compile(
+    loss = 'categorical_crossentropy',
+    optimizer = optimizer_adam(),
+    metrics = c('accuracy')
+  ) %>%
+  fit(
+    x = mnist_x,
+    y = mnist_y,
+    epochs = 35,
+    batch_size = 128,
+    validation_split = 0.2,
+    callbacks = list(
+      callback_early_stopping(patience = 5),
+      callback_reduce_lr_on_plateau(factor = 0.05)
+      ),
+    verbose = FALSE
+  )
+
+model_w_adj_lrn
+## Trained on 48,000 samples, validated on 12,000 samples (batch_size=128, epochs=20)
+## Final epoch (plot to see history):
+## val_loss: 0.07223
+##  val_acc: 0.9808
+##     loss: 0.05366
+##      acc: 0.9832
+##       lr: 0.001
+
+# Optimal
+min(model_w_adj_lrn$metrics$val_loss)
+## [1] 0.0699492
+max(model_w_adj_lrn$metrics$val_acc)
+## [1] 0.981
+
+# Learning rate
+plot(model_w_adj_lrn)
+```
+
+#13.8 Grid Search
+
+```{r}
+FLAGS <- flags(
+  # Nodes
+  flag_numeric("nodes1", 256),
+  flag_numeric("nodes2", 128),
+  flag_numeric("nodes3", 64),
+  # Dropout
+  flag_numeric("dropout1", 0.4),
+  flag_numeric("dropout2", 0.3),
+  flag_numeric("dropout3", 0.2),
+  # Learning paramaters
+  flag_string("optimizer", "rmsprop"),
+  flag_numeric("lr_annealing", 0.1)
+)
+```
+
+
+```{r}
+model <- keras_model_sequential() %>%
+  layer_dense(units = FLAGS$nodes1, activation = "relu", input_shape = ncol(mnist_x)) %>%
+  layer_batch_normalization() %>%
+  layer_dropout(rate = FLAGS$dropout1) %>%
+  layer_dense(units = FLAGS$nodes2, activation = "relu") %>%
+  layer_batch_normalization() %>%
+  layer_dropout(rate = FLAGS$dropout2) %>%
+  layer_dense(units = FLAGS$nodes3, activation = "relu") %>%
+  layer_batch_normalization() %>%
+  layer_dropout(rate = FLAGS$dropout3) %>%
+  layer_dense(units = 10, activation = "softmax") %>%
+  compile(
+    loss = 'categorical_crossentropy',
+    metrics = c('accuracy'),
+    optimizer = FLAGS$optimizer
+  ) %>%
+  fit(
+    x = mnist_x,
+    y = mnist_y,
+    epochs = 35,
+    batch_size = 128,
+    validation_split = 0.2,
+    callbacks = list(
+      callback_early_stopping(patience = 5),
+      callback_reduce_lr_on_plateau(factor = FLAGS$lr_annealing)
+    ),
+    verbose = FALSE
+  )
+```
+The following grid search took us over 1.5 hours to run!
+
+```{r}
+# Run various combinations of dropout1 and dropout2
+runs <- tuning_run("scripts/mnist-grid-search.R", 
+  flags = list(
+    nodes1 = c(64, 128, 256),
+    nodes2 = c(64, 128, 256),
+    nodes3 = c(64, 128, 256),
+    dropout1 = c(0.2, 0.3, 0.4),
+    dropout2 = c(0.2, 0.3, 0.4),
+    dropout3 = c(0.2, 0.3, 0.4),
+    optimizer = c("rmsprop", "adam"),
+    lr_annealing = c(0.1, 0.05)
+  ),
+  sample = 0.05
+)
+
+runs %>% 
+  filter(metric_val_loss == min(metric_val_loss)) %>% 
+  glimpse()
+## Observations: 1
+## Variables: 31
+## $ run_dir            <chr> "runs/2019-04-27T14-44-38Z"
+## $ metric_loss        <dbl> 0.0598
+## $ metric_acc         <dbl> 0.9806
+## $ metric_val_loss    <dbl> 0.0686
+## $ metric_val_acc     <dbl> 0.9806
+## $ flag_nodes1        <int> 256
+## $ flag_nodes2        <int> 128
+## $ flag_nodes3        <int> 256
+## $ flag_dropout1      <dbl> 0.4
+## $ flag_dropout2      <dbl> 0.2
+## $ flag_dropout3      <dbl> 0.3
+## $ flag_optimizer     <chr> "adam"
+## $ flag_lr_annealing  <dbl> 0.05
+## $ samples            <int> 48000
+## $ validation_samples <int> 12000
+## $ batch_size         <int> 128
+## $ epochs             <int> 35
+## $ epochs_completed   <int> 17
+## $ metrics            <chr> "runs/2019-04-27T14-44-38Z/tfruns.d/metrics.json"
+## $ model              <chr> "Model\n_______________________________________________________…
+## $ loss_function      <chr> "categorical_crossentropy"
+## $ optimizer          <chr> "<tensorflow.python.keras.optimizers.Adam>"
+## $ learning_rate      <dbl> 0.001
+## $ script             <chr> "mnist-grid-search.R"
+## $ start              <dttm> 2019-04-27 14:44:38
+## $ end                <dttm> 2019-04-27 14:45:39
+## $ completed          <lgl> TRUE
+## $ output             <chr> "\n> #' Trains a feedforward DL model on the MNIST dataset.\n> …
+## $ source_code        <chr> "runs/2019-04-27T14-44-38Z/tfruns.d/source.tar.gz"
+## $ context            <chr> "local"
+## $ type               <chr> "training"
 ```
 
 
 ```{r}
 ```
-
 
 ```{r}
 ```
