--- a/house_price.Rmd
+++ b/house_price.Rmd
@@ -2351,6 +2351,236 @@ auto_ml@leaderboard %>%
 
 ```
 
+#**Chapter 20 K-means Clustering**
+
+```{r}
+# Helper packages
+library(dplyr)       # for data manipulation
+library(ggplot2)     # for data visualization
+library(stringr)     # for string functionality
+
+# Modeling packages
+library(cluster)     # for general clustering algorithms
+library(factoextra)  # for visualizing cluster results
+```
+
+```{r}
+# Full ames data set --> recode ordinal variables to numeric
+ames_full <- AmesHousing::make_ames() %>%
+  mutate_if(str_detect(names(.), 'Qual|Cond|QC|Qu'), as.numeric)
+
+# One-hot encode --> retain only the features and not sale price
+full_rank  <- caret::dummyVars(Sale_Price ~ ., data = ames_full, 
+                               fullRank = TRUE)
+ames_1hot <- predict(full_rank, ames_full)
+
+# Scale data
+ames_1hot_scaled <- scale(ames_1hot)
+
+# New dimensions
+dim(ames_1hot_scaled)
+## [1] 2930  240
+```
+```{r}
+sum(is.na(ames_1hot_scaled))
+colSums(is.na(ames_1hot_scaled))
+```
+
+```{r}
+# Cannot use Kmean with NA rows
+set.seed(123)
+
+fviz_nbclust(
+  ames_1hot_scaled, 
+  kmeans, 
+  method = "wss", 
+  k.max = 25, 
+  verbose = FALSE
+)
+```
+
+
+```{r}
+# Original data minus Sale_Price
+ames_full <- AmesHousing::make_ames() %>% select(-Sale_Price)
+
+# Compute Gower distance for original data
+gower_dst <- daisy(ames_full, metric = "gower")
+```
+
+
+```{r}
+# You can supply the Gower distance matrix to several clustering algos
+pam_gower <- pam(x = gower_dst, k = 8, diss = TRUE)
+diana_gower <- diana(x = gower_dst, diss = TRUE)
+agnes_gower <- agnes(x = gower_dst, diss = TRUE)
+```
+#20.8 Alternative partitioning methods
+
+As your data grow in dimensions you are likely to introduce more outliers; since k-means uses the mean, it is not robust to outliers. An alternative to this is to use partitioning around medians (PAM), which has the same algorithmic steps as k-means but uses the median rather than the mean to determine the centroid; making it more robust to outliers. Unfortunately, this robustness comes with an added computational expense (J. Friedman, Hastie, and Tibshirani 2001).
+
+```{r}
+fviz_nbclust(
+  ames_1hot_scaled, 
+  pam, 
+  method = "wss", 
+  k.max = 25, 
+  verbose = FALSE
+)
+```
+
+#**Chapter 21 Hierarchical Clustering**
+
+Hierarchical clustering is an alternative approach to k-means clustering for identifying groups in a data set. In contrast to k-means, hierarchical clustering will create a hierarchy of clusters and therefore does not require us to pre-specify the number of clusters. Furthermore, hierarchical clustering has an added advantage over k-means clustering in that its results can be easily visualized using an attractive tree-based representation called a dendrogram.
+
+```{r}
+# Helper packages
+library(dplyr)       # for data manipulation
+library(ggplot2)     # for data visualization
+
+# Modeling packages
+library(cluster)     # for general clustering algorithms
+library(factoextra)  # for visualizing cluster results
+```
+
+
+```{r}
+ames_scale <- AmesHousing::make_ames() %>%
+  select_if(is.numeric) %>%  # select numeric columns
+  select(-Sale_Price) %>%    # remove target column
+  mutate_all(as.double) %>%  # coerce to double type
+  scale()                    # center & scale the resulting columns
+```
+
+#21.3.1 Agglomerative hierarchical clustering
+```{r}
+# For reproducibility
+set.seed(123)
+
+# Dissimilarity matrix
+d <- dist(ames_scale, method = "euclidean")
+
+# Hierarchical clustering using Complete Linkage
+hc1 <- hclust(d, method = "complete" )
+```
+
+
+```{r}
+# For reproducibility
+set.seed(123)
+
+# Compute maximum or complete linkage clustering with agnes
+hc2 <- agnes(ames_scale, method = "complete")
+
+# Agglomerative coefficient
+hc2$ac
+## [1] 0.926775
+```
+
+This grid search took a little over 3 minutes.
+
+```{r}
+# methods to assess
+m <- c( "average", "single", "complete", "ward")
+names(m) <- c( "average", "single", "complete", "ward")
+
+# function to compute coefficient
+ac <- function(x) {
+  agnes(ames_scale, method = x)$ac
+}
+
+# get agglomerative coefficient for each linkage method
+purrr::map_dbl(m, ac)
+##   average    single  complete      ward 
+## 0.9139303 0.8712890 0.9267750 0.9766577
+```
+
+#21.3.2 Divisive hierarchical clustering
+```{r}
+# compute divisive hierarchical clustering
+hc4 <- diana(ames_scale)
+
+# Divise coefficient; amount of clustering structure found
+hc4$dc
+## [1] 0.9191094
+```
+
+21.4 Determining optimal clusters
+
+```{r}
+# Plot cluster results
+p1 <- fviz_nbclust(ames_scale, FUN = hcut, method = "wss", 
+                   k.max = 10) +
+  ggtitle("(A) Elbow method")
+p2 <- fviz_nbclust(ames_scale, FUN = hcut, method = "silhouette", 
+                   k.max = 10) +
+  ggtitle("(B) Silhouette method")
+p3 <- fviz_nbclust(ames_scale, FUN = hcut, method = "gap_stat", 
+                   k.max = 10) +
+  ggtitle("(C) Gap statistic")
+
+# Display plots side by side
+gridExtra::grid.arrange(p1, p2, p3, nrow = 1)
+```
+
+#21.5 Working with dendrograms
+```{r}
+# Construct dendorgram for the Ames housing example
+hc5 <- hclust(d, method = "ward.D2" )
+dend_plot <- fviz_dend(hc5)
+dend_data <- attr(dend_plot, "dendrogram")
+dend_cuts <- cut(dend_data, h = 8)
+fviz_dend(dend_cuts$lower[[2]])
+```
+
+
+```{r}
+# Ward's method
+hc5 <- hclust(d, method = "ward.D2" )
+
+# Cut tree into 4 groups
+sub_grp <- cutree(hc5, k = 8)
+
+# Number of members in each cluster
+table(sub_grp)
+## sub_grp
+##    1    2    3    4    5    6    7    8 
+## 1363  567  650   36  123  156   24   11
+```
+
+
+```{r}
+# Plot full dendogram
+fviz_dend(
+  hc5,
+  k = 8,
+  horiz = TRUE,
+  rect = TRUE,
+  rect_fill = TRUE,
+  rect_border = "jco",
+  k_colors = "jco",
+  cex = 0.1
+)
+```
+
+
+```{r}
+dend_plot <- fviz_dend(hc5)                # create full dendogram
+dend_data <- attr(dend_plot, "dendrogram") # extract plot info
+dend_cuts <- cut(dend_data, h = 70.5)      # cut the dendogram at 
+                                           # designated height
+# Create sub dendrogram plots
+p1 <- fviz_dend(dend_cuts$lower[[1]])
+p2 <- fviz_dend(dend_cuts$lower[[1]], type = 'circular')
+
+# Side by side plots
+gridExtra::grid.arrange(p1, p2, nrow = 1)
+```
+
+
+```{r}
+```
+
 
 ```{r}
 ```
